--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=larabbs
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_USERNAME=larabbs
+DB_PASSWORD=larabbs
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
